# pixi_devcontainer

./: Containerfile  README.md  pyproject.toml  shell-hook.sh  test.ipynb  test_output.ipynb
.devcontainer/: devcontainer.json
