[project]
authors = [{name = "Luis R. Gonzalez", email = "lgonzalezsa@gmail.com"}]
dependencies = []
description = "test devcontainer pixi"
name = "pixi_devcontainer"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]

[tool.pixi.tasks]

[tool.pixi.dependencies]
ipykernel = ">=6.29.5,<7"
loguru = ">=0.7.2,<0.8"
papermill = ">=2.6.0,<3"
